[tool.poetry]
name = "pocketsmith-api"
version = "2.1.0"
description = "Pocketsmith API client"
authors = ["Zach \"theY4Kman\" Kanzler <they4kman@gmail.com>"]
license = "MIT"
homepage = 'https://github.com/theY4Kman/python-pocketsmith-api'
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Financial and Insurance Industry',
    'Topic :: Internet :: WWW/HTTP',
]
packages = [
    { include = 'pocketsmith' },
    { include = 'LICENSE', format = 'sdist' },
    { include = 'CHANGELOG.md', format = 'sdist' },
]

[tool.poetry.dependencies]
certifi = "*"
python = ">=3.6"
python-dateutil = "*"
six = "*"
urllib3 = { version = "*", extras = ["secure"] }

[tool.poetry.dev-dependencies]
pytest = ">=3.6"
pytest-camel-collect = "^1.0.1"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
